maze.lessons.maze.island.IslandMaze.scala.error
Escaper:10: error: not found: value nord
      setDirection(nord)
                   ^