maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit())
  {
    if (!estFaceMur())
    	avance()
    else
    {
    	keepHandOnSideWall()
      setDirection(nord)
    }
  }
  prendBiscuit()
}

def keepHandOnSideWall()
{
  if (estFaceMur())
  {
    droite()
    if (estFaceMur())
    	droite()
    else
    	avance()
  }
  else
  {
  	avance()
  }
}